Fix alignment of username and date

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -13,7 +13,6 @@ html {
   flex-direction: column;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
-  text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
